will-change: position should not create a containing block for position: fixed elements https://bugs.webkit.org/show_bug.cgi?id=225443

Reviewed by Antti Koivisto.

This partially undoes r276627 which made will-change: position create a CB for all out-of-flow elements:

- Removed CSSPropertyPosition from createsContainingBlockForOutOfFlowPositioned() to not create a containing block
for position: fixed; children.
- Added createsContainingBlockForAbsolutelyPositioned() with CSSPropertyPosition to still create a containing block
for position: absolute; children.

Enabled WPT (which covers both cases): css/css-will-change/will-change-fixpos-cb-position-1.html

Source/WebCore:

* rendering/RenderElement.h:
(WebCore::RenderElement::canContainAbsolutelyPositionedObjects const):
* rendering/style/WillChangeData.cpp:
(WebCore::WillChangeData::createsContainingBlockForAbsolutelyPositioned const):
(WebCore::WillChangeData::createsContainingBlockForOutOfFlowPositioned const):
* rendering/style/WillChangeData.h:

LayoutTests:

* TestExpectations:


Canonical link: https://commits.webkit.org/237806@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@277579 268f45cc-cd09-0410-ab3c-d52691b4dbfc